# gmat-sweep

./: 404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: backend-request.yml  bug.yml  config.yml  feature.yml  use-case-fit.yml
.github/workflows/: ci.yml  integration.yml  release.yml
aggregation/: index.html
api/: index.html
backends/: index.html
benchmarks/: index.html
cli/: index.html
cookbook/: index.html
docs/: aggregation.md  api.md  backends.md  benchmarks.md  cli.md  cookbook.md  faq.md  getting-started.md  index.md  manifest-schema.md  monte-carlo.md  parameter-spec.md  resume.md  sensitivity.md  supported-versions.md
docs/examples/: 01_sma_scan.ipynb  02_epoch_arrival_grid.ipynb  03_killed_sweep_recovery.ipynb  04_monte_carlo_dispersion.ipynb  05_latin_hypercube.ipynb  06_dask_cluster_recipe.ipynb  07_ray_autoscaling_recipe.ipynb  09_archive_bundle.ipynb  10_extending_monte_carlo.ipynb  index.md  injection_dispersion.script  leo_keplerian.script  leo_short.script  transfer_porkchop.script
docs/recipes/: index.md  kubernetes-jobpool.md  kubernetes.md  ray-autoscaling.md  slurm.md
examples/: index.html
examples/01_sma_scan/: 01_sma_scan.ipynb  index.html
examples/02_epoch_arrival_grid/: index.html
examples/03_killed_sweep_recovery/: 03_killed_sweep_recovery.ipynb  index.html
examples/04_monte_carlo_dispersion/: 04_monte_carlo_dispersion.ipynb  index.html
examples/05_latin_hypercube/: 05_latin_hypercube.ipynb  index.html
examples/06_dask_cluster_recipe/: 06_dask_cluster_recipe.ipynb  index.html
examples/07_ray_autoscaling_recipe/: 07_ray_autoscaling_recipe.ipynb  index.html
examples/08_sobol_sensitivity/: 08_sobol_sensitivity.ipynb  index.html
examples/09_archive_bundle/: 09_archive_bundle.ipynb  index.html
examples/10_extending_monte_carlo/: index.html
faq/: index.html
getting-started/: index.html
joss/: paper.bib  paper.md
manifest-schema/: index.html
monte-carlo/: index.html
parameter-spec/: index.html
recipes/: index.html
recipes/kubernetes/: index.html
recipes/kubernetes-jobpool/: index.html
recipes/ray-autoscaling/: index.html
recipes/slurm/: index.html
resume/: index.html
search/: search_index.json
sensitivity/: index.html
src/gmat_sweep/: __init__.py  _repr_html.py  _run_subprocess.py  _worker_entrypoint.py  aggregate.py  api.py  archive.py  cli.py  distributions.py  errors.py  grids.py  manifest.py  plotting.py  sensitivity.py  spec.py  sweep.py  worker.py
src/gmat_sweep/backends/: __init__.py  _subprocess.py  base.py  dask.py  debug.py  joblib.py  kubernetes.py  mpi.py  process_pool.py  ray.py
supported-versions/: index.html
tests/: conftest.py  test_aggregate.py  test_api.py  test_archive.py  test_backend_equivalence.py  test_backend_throughput.py  test_backends_base.py  test_backends_dask.py  test_backends_debug.py  test_backends_init.py  test_backends_joblib.py  test_backends_kubernetes.py  test_backends_mpi.py  test_backends_process_pool.py  test_backends_ray.py  test_backends_subprocess.py  test_benchmark_sweep_helpers.py  test_cli.py  test_distributions.py  test_ephemeris_contact_aggregation.py  test_errors.py  test_explicit_row_roundtrip.py  test_failure_modes.py  test_grids.py  test_import.py  test_latin_hypercube_stratification.py  test_manifest.py  test_manifest_replay_contract.py  test_monte_carlo_determinism.py  test_monte_carlo_extend.py  test_param_roundtrip.py  test_plotting.py  test_recipe_snippets.py  test_reference_sweep.py  test_repr_html.py  test_resume_roundtrip.py  test_run_roundtrip.py  test_run_subprocess.py  test_run_subprocess_integration.py  test_sensitivity.py  (+5 more)
tests/data/: benchmark_sweep.py  injection_dispersion.script  leo_basic.script  throughput_floor.json
tests/data/golden/: sma_16.parquet
tests/k8s/: Dockerfile  kind-config.yaml  sweep-pvc.yaml
