[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmat-sweep"
version = "0.0.0"
description = "Run parameter sweeps and Monte Carlo dispersions over GMAT missions in parallel from Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dimitrije Jankovic" }]
keywords = [
  "gmat",
  "astrodynamics",
  "orbital-mechanics",
  "mission-analysis",
  "monte-carlo",
  "parameter-sweep",
  "parallel",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
dependencies = [
  "gmat-run>=0.3",
  "pandas>=2.0",
  "numpy>=1.24",
  "joblib>=1.3",
  "tqdm>=4.66",
  "pyarrow>=14",
  "scipy>=1.11",
]

[project.optional-dependencies]
dask = ["distributed>=2024.1"]
ray = ["ray[default]>=2.10"]
plot = ["matplotlib>=3.8"]

[project.scripts]
gmat-sweep = "gmat_sweep.cli:main"

[project.urls]
Homepage = "https://github.com/astro-tools/gmat-sweep"
Repository = "https://github.com/astro-tools/gmat-sweep"
Issues = "https://github.com/astro-tools/gmat-sweep/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.6",
  "ruff>=0.6",
  "mypy>=1.11",
  "pandas-stubs",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
  "mkdocs-jupyter>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gmat_sweep"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # flake8-bugbear
  "UP",       # pyupgrade
  "SIM",      # flake8-simplify
  "RUF",      # ruff-specific
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/gmat_sweep", "tests"]

# gmatpy is a runtime-discovered module from the user's GMAT install; do not type-check it.
[[tool.mypy.overrides]]
module = ["gmatpy", "gmatpy.*", "load_gmat"]
ignore_missing_imports = true

# joblib ships no py.typed marker; backends/joblib.py treats the loky surface as Any
# inside a small typed wrapper.
[[tool.mypy.overrides]]
module = ["joblib", "joblib.*"]
ignore_missing_imports = true

# pyarrow ships partial stubs but the dataset API surface used by aggregate.py
# trips mypy --strict; treat the import as Any inside the small surface used here.
[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Default to unit tests only. Integration tests opt in with `-m integration`
# (or `-m "integration or not integration"` to run both layers in one go).
addopts = "-ra --strict-markers --strict-config -m 'not integration'"
markers = [
  "integration: tests that require a working GMAT install (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["src/gmat_sweep"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
]
